# Sleuth

./: .gitignore  README.md  configuration_example.json  newsfeed.py  pyproject.toml  util.py
assets/images/: background.psd
